# trackthenews

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  config-sample.yaml  foiabot.py  foiafeed.py  matchwords.txt  pyproject.bak.toml  pyproject.toml  requirements.txt  rssfeeds-sample.json  rssfeeds.json  schema.sql  setup.py  trackthenews.py
.github/: dependabot.yml
.github/workflows/: ci.yml
sample_project/: rssfeeds-sample.json
trackthenews/: __init__.py  base_blocklist.py  core.py
