[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
include = ["trackthenews/fonts/*"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.0.0"
isort = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "trackthenews"
description = "Monitor RSS feeds for keywords and act on matching results. A special project of the Freedom of the Press Foundation."
license = "MIT"
version = "0.4"
readme = "README.md"
authors = [{name = "Freedom of the Press Foundation", email = "info@freedom.press"}]
maintainers = [{name = "Erik Moeller", email = "erik@freedom.press"}, {name = "Harris Lapiroff", email = "harris@freedom.press"}]
dynamic = ["requires-python"]
dependencies = [
  'feedparser (>=6.0,<7.0)',
  'html2text (==2018.1.9)',
  'Pillow (>=12.2.0,<13.0.0)',
  'pyaml (>=18.11.0,<19.0.0)',
  'readability-lxml (>=0.8.1,<0.9.0)',
  'requests (>=2.33.0,<3.0.0)',
  'tweepy (>=4.14.0,<5.0.0)',
  'Mastodon.py (>=1.8.1,<2.0.0)',
  'lxml[html-clean] (>=6.1.0,<7.0.0)',
  'beautifulsoup4 (>=4.12.3,<5.0.0)'
]

[project.urls]
repository = "https://github.com/freedomofpress/trackthenews"

[project.scripts]
trackthenews = 'trackthenews:main'
