[tool.poetry]
include = ["trackthenews/fonts/*"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.18"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["E501", "E266"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "trackthenews"
description = "Monitor RSS feeds for keywords and act on matching results. A special project of the Freedom of the Press Foundation."
license = "MIT"
version = "0.4"
readme = "README.md"
authors = [{name = "Freedom of the Press Foundation", email = "info@freedom.press"}]
maintainers = [{name = "Erik Moeller", email = "erik@freedom.press"}, {name = "Harris Lapiroff", email = "harris@freedom.press"}]
dynamic = ["requires-python"]
dependencies = [
  'feedparser (>=6.0.12,<7.0)',
  'html2text (==2018.1.9)',
  'Pillow (>=12.2.0,<13.0.0)',
  'pyaml (>=18.11.0,<19.0.0)',
  'readability-lxml (>=0.8.4.1,<0.9.0)',
  'requests (>=2.34.2,<3.0.0)',
  'tweepy (>=4.14.0,<5.0.0)',
  'Mastodon.py (>=1.8.1,<2.0.0)',
  'lxml[html-clean] (>=6.1.1,<7.0.0)',
  'beautifulsoup4 (>=4.15.0,<5.0.0)'
]

[project.urls]
repository = "https://github.com/freedomofpress/trackthenews"

[project.scripts]
trackthenews = 'trackthenews:main'
